# mcp-video-extraction

./: README.md  README_zh.md  main.py  pyproject.toml
src/mcp_video_service/services/: video_service.py
