[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-video-service"
version = "1.0.0"
description = "An MCP server for video downloading and text extraction"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "openai-whisper",
    "yt-dlp",
    "pyyaml",
    "mcp[cli]",
]

[project.scripts]
mcp-video-service = "mcp_video_service.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_video_service"]
